--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,14 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://jitpack.io'
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
     }
 }
 
