--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,47 @@ org.gradle.jvmargs=-Xmx2048m
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
+# \u8868\u793A\u4F7F\u7528 androidx
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
+# \u8868\u793A\u5C06\u7B2C\u4E09\u65B9\u5E93\u8FC1\u79FB\u5230 androidx
 android.enableJetifier=true
+
+#Version
+VERSION_NAME=1.0.0
+VERSION_CODE=100
+
+#Android sdk
+ANDROID_BUILD_TARGET_SDK_VERSION=30
+ANDROID_BUILD_MIN_SDK_VERSION=16
+ANDROID_BUILD_TOOLS_VERSION=30.0.2
+ANDROID_BUILD_SDK_VERSION=30
+ANDROID_X_VERSION=1.0.0
+ANDROID_X_MATERIAL_VERSION = 1.0.0-rc01
+
+#Butterknife
+BUTTERKNIFE_VERSION_CODE=10.0.0
+#Constraintlayout
+CONSTRAINTLAYOUT_VERSION = 2.0.1 
+#Leakcanary
+LEAKCANARY_VERSION_CODE=1.6.3
+#AndPermission
+ANDPERMISSION_VERSION_CODE=2.0.0-rc4
+#gson
+GSON_VERSION_CODE=2.8.2
+#smartTabLayout
+SMARTTABLAYOUT_VERSION_CODE=1.7.0@aar
+#SmartRefreshLayout
+SMARTREFRESHLAYOUT_VERSION_CODE=1.0.1
+#statusbarutil
+STATUSBARUTIL_VERSION_CODE=1.4.0
+#retrofit
+RETROFIT_VERSION_CODE=2.4.0
+#rxjava
+RXJAVA_VERSION_CODE=2.2.3
+#rxAndroid
+RXANDROID_VERSION_CODE=2.1.0
+#Room
+ROOM_VERSION_CODE=1.1.1
+#glide
+GLIDE_VERSION_CODE=4.6.1
