--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,33 @@ dependencies {
     //butterknife
     api "com.jakewharton:butterknife:${project.BUTTERKNIFE_VERSION_CODE}"
     annotationProcessor "com.jakewharton:butterknife-compiler:10.0.0"
+    // Leakcanary
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${project.LEAKCANARY_VERSION_CODE}"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${project.LEAKCANARY_VERSION_CODE}"
+    // AndPermission
+    api "com.yanzhenjie:permission:${project.ANDPERMISSION_VERSION_CODE}"
+    //gson
+    api "com.google.code.gson:gson:${project.GSON_VERSION_CODE}"
+    //smartTabLayout
+    api "com.ogaclejapan.smarttablayout:library:${project.SMARTTABLAYOUT_VERSION_CODE}"
+    api "com.ogaclejapan.smarttablayout:utils-v13:${project.SMARTTABLAYOUT_VERSION_CODE}"
+    //SmartRefreshLayout下拉刷新上拉加载详解
+    api "com.scwang.smartrefresh:SmartRefreshLayout:${project.SMARTREFRESHLAYOUT_VERSION_CODE}"
+    api "com.scwang.smartrefresh:SmartRefreshHeader:${project.SMARTREFRESHLAYOUT_VERSION_CODE}"
+    //statusbarutil https://github.com/laobie/StatusBarUtil
+    api "com.jaeger.statusbarutil:library:${project.STATUSBARUTIL_VERSION_CODE}"
+    // retrofit2 + rxjava2
+    api "com.squareup.retrofit2:retrofit:${project.RETROFIT_VERSION_CODE}"
+    api "com.squareup.retrofit2:converter-gson:${project.RETROFIT_VERSION_CODE}"
+    api "com.squareup.retrofit2:adapter-rxjava2:${project.RETROFIT_VERSION_CODE}"
+    api "io.reactivex.rxjava2:rxandroid:${project.RXANDROID_VERSION_CODE}"
+    api "io.reactivex.rxjava2:rxjava:${project.RXJAVA_VERSION_CODE}"
+    // Room components
+    implementation "android.arch.persistence.room:runtime:${project.ROOM_VERSION_CODE}"
+    annotationProcessor "android.arch.persistence.room:compiler:${project.ROOM_VERSION_CODE}"
+    androidTestImplementation "android.arch.persistence.room:testing:${project.ROOM_VERSION_CODE}"
+    //glide
+    api "com.github.bumptech.glide:glide:${project.GLIDE_VERSION_CODE}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${project.GLIDE_VERSION_CODE}"
 
 }
