--- a/gradle.properties
+++ b/gradle.properties
@@ -39,7 +39,7 @@ CONSTRAINTLAYOUT_VERSION = 1.1.2
 #Leakcanary
 LEAKCANARY_VERSION_CODE=1.6.3
 #AndPermission
-ANDPERMISSION_VERSION_CODE=2.0.0-rc4
+ANDPERMISSION_VERSION_CODE=2.0.3
 #gson
 GSON_VERSION_CODE=2.8.2
 #smartTabLayout
